# b64s

./: .gitignore  README.md  b64s.py  environment.yml  pyproject.toml  scratchpad.ipynb  test_b64s.py  test_blah.py
.github/: dependabot.yml
.github/workflows/: lint.yml  main.yml  markdown.yml  tests.yml  typecheck.yml  whitespace.yml
b64s/: __init__.py
