[tool.poetry]
name = "b64s"
version = "0.1.0"
description = "Friendly Base64 with str input and output, using UTF-8"
authors = ["Eliah Kagan <degeneracypressure@gmail.com>"]
license = "CC0-1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
flake8 = { version = "^6.0.0", python = ">=3.8.1,<4.0" }
ipykernel = { version = "^6.21.3", python = "^3.8" }
mypy = "^1.1.1"
pylint = { version = "^2.17.0", python = ">=3.7.2,<4.0" }
pyright = "^1.1.299"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
