[tool.poetry]
name = "b64s"
version = "0.1.0"
description = "Base64 with UTF-8 str input and output"
authors = ["Eliah Kagan <degeneracypressure@gmail.com>"]
license = "CC0-1.0"
readme = "dist-readme.md"  # NOTE: This is for PyPI. Main readme is README.md.
homepage = "https://github.com/EliahKagan/b64s"
repository = "https://github.com/EliahKagan/b64s"
keywords = ["base64", "decoding", "encoding", "text", "utf-8"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.analyze.dependencies]
flake8 = { version = "^6.0.0", python = ">=3.8.1,<4.0" }
mypy = "^1.3.0"
pylint = { version = "^2.17.4", python = ">=3.7.2,<4.0" }
pyright = "^1.1.310"

[tool.poetry.group.notebook.dependencies]
ipykernel = { version = "^6.23.1", python = "^3.8" }
ipython = { version = "~8.12.2", python = ">=3.8,<4.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
